--- a/app/views/layouts/shared/_services.html.erb
+++ b/app/views/layouts/shared/_services.html.erb
@@ -11,6 +11,7 @@
                           <%= image_tag service.picture.url(:medium) %>
                           </div></div>
                           <h4><%= service.title%> </h4>
+                          <p><%= service.description%></p>
                           <span class='details' id='<%= service.id %>'>READ MORE</span> 
                       </a>
                  </div>
