--- a/app/views/layouts/shared/_slider.html.erb
+++ b/app/views/layouts/shared/_slider.html.erb
@@ -8,16 +8,16 @@
                                        <div class="bandescout">
                                         	<div class="container">
                                             	<div class="row">
-                                              <!--
-                                                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
-                                                      <h2>Honest Weight Loss </h2>
-                                                      <h3>THROUGH WISE NUTRITION </h3>
-                                                      <h4><span>II</span> Customised Meal Plans  </h4>
-                                                      <h4><span>II</span> Super Food Kits  </h4>
-                                                      <h4><span>II</span> Mentoring </h4>
-                                                      <div class="btnarea"><a href="#">READ MORE</a></div>
-                                                  </div>
-                                                  -->
+                                                <div class="row">
+                                                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                                        <h2>Honest Weight Loss </h2>
+                                                        <h3>THROUGH WISE NUTRITION </h3>
+                                                        <h4><span>II</span> Customised Meal Plans </h4>
+                                                        <h4><span>II</span> Online Diet Counsultation </h4>
+                                                        
+                                                        <%= link_to '<button type="button" class="btn btn-success">Register Now</button>'.html_safe, new_user_registration_path%>
+                                                    </div>
+                                                </div>
                                               </div>
                                            </div>
                                         </div>
@@ -29,15 +29,13 @@
                                        <div class="bandescout">
                                         	<div class="container">
                                             	<div class="row">
-                                              <!--
-                                                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
-                                                      <h2>Honest Weight Loss </h2>
-                                                      <h3>THROUGH WISE NUTRITION </h3>
-                                                      <h4><span>II</span> Customised Meal Plans  </h4>
-                                                      <h4><span>II</span> Super Food Kits  </h4>
-                                                      <div class="btnarea"><a href="#">READ MORE</a></div>
-                                                  </div>
-                                                  -->
+                                                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                                        <h2>Pregnancy Diet Plans </h2>
+                                                        <h3>THROUGH WISE NUTRITION </h3>
+                                                        <h4><span>II</span> Customised Meal Plans </h4>
+                                                        <h4><span>II</span> Online Diet Counsultation </h4>
+                                                        <%= link_to '<button type="button" class="btn btn-success">Register Now</button>'.html_safe, new_user_registration_path%>
+                                                    </div>
                                               </div>
                                            </div>
                                         </div>
