Fixed issues in order index page.

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -22,7 +22,8 @@
                       <tr>
                         <td><%= index + 1 %></td>
                         <td><%= order.service_name %></td>
-                        <td><%= order.package_name %></td>
+                        <td><%= order.package_name %>&nbsp; Months(s)</td>
+                        <td><%= order.payment_status %></td>
                         <td><%= order.total_amount %></td>
                         <td>
                             <%# link_to '<button type="button" class="btn btn-primary">Profile
